# cpp-practices

./: CMakeLists.txt  README.md
practice_1/: main.cpp
practice_10/: main.cpp
practice_11/: main.cpp
practice_12/: graph.h  main.cpp
practice_13/: main.cpp
practice_15/: main.cpp
practice_15/chess/board/: Board.h  ClassicBoard.h
practice_15/chess/game/: ClassicGame.h  Game.h
practice_15/chess/move/: Move.h  Player.h
practice_15/chess/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
practice_15/chess/render/: Renderer.h
practice_15/chess/render/console/: ConsoleCell.h  ConsoleDrawable.h  ConsoleRenderer.h
practice_15/chess/util/: util.h
practice_15/shapes/: Circle.h  Rectangle.h  Shape.h  ShapeFactory.h  Triangle.h
practice_15/shapes/interfaces/: Drawable2D.h
practice_15/shapes/src/: Circle.cpp  Rectangle.cpp  Triangle.cpp
practice_2/: main.cpp
practice_3/: DynArray.h  MyStack.h  main.cpp
practice_4/: DynArray.h  Vec3d.h  main.cpp
practice_5/: main.cpp
practice_5/include/: Matrix.h  SLESolver.h  Vector.h
practice_5/src/: Matrix.cpp  SLESolver.cpp  Vector.cpp
practice_6/: main.cpp
practice_6/include/: DynArray.h  Queue.h
practice_6/src/: DynArray.cpp  Queue.cpp
practice_7/: main.cpp
practice_8/: LinkedList.h  main.cpp
practice_9/: LinkedList.h  main.cpp
